--- a/css/main.css
+++ b/css/main.css
@@ -126,13 +126,14 @@ body .wrapper .header__btn {
 body .wrapper .header .burger-menu {
   display: none;
 }
-body .wrapper .nav__list {
+body .wrapper .header .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 56px;
 }
-body .wrapper .nav__list__item__link {
+body .wrapper .header .nav__list__item__link {
+  color: #040404;
   font-family: "Ubuntu", sans-serif;
   font-size: 24px;
   font-weight: 400;
